--- a/src/App.scss
+++ b/src/App.scss
@@ -26,5 +26,8 @@
 }
 
 .monsterItem {
-  margin-right: 5px;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 5px;
+  box-shadow: 1px 1px 7px 2px rgba(189, 189, 189, 0.849);
 }
