--- a/src/App.scss
+++ b/src/App.scss
@@ -26,8 +26,14 @@
 }
 
 .monsterItem {
+  display: grid;
+  place-items: center;
   border-radius: 5px;
   margin: 10px;
   padding: 5px;
   box-shadow: 1px 1px 7px 2px rgba(189, 189, 189, 0.849);
+
+  .damageButton {
+    text-align: center;
+  }
 }
