--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,8 @@
   height: 100vh;
   width: 100vw;
   background: rgb(219, 219, 219);
+
+
 }
 
 .header {
@@ -25,15 +27,96 @@
   }
 }
 
+
+.grid {
+  display: grid;
+  grid: repeat( 12, 1fr)/ repeat(12, 1fr);
+
+}
+
 .monsterItem {
   display: grid;
+  grid-area: 1/1/13/13;
   place-items: center;
   border-radius: 5px;
   margin: 10px;
   padding: 5px;
-  box-shadow: 1px 1px 7px 2px rgba(189, 189, 189, 0.849);
+  box-shadow: 1px 1px 7px 2px rgba(189, 189, 189, 0.849); 
+}
 
-  .damageButton {
-    text-align: center;
+.closeMonsterButton {
+  grid-area: 1/12/2/13;
+  border-radius: 5px;
+}
+
+.damageButton {
+  grid-area: 11/5/13/13;
+}
+
+.initiativeContainerHidden {
+  display: flex;
+  position: fixed;
+  left: 0;
+  top: 0;
+  transform: translate3d(85vw, 0, 0);
+  transition: transform 0.3s cubic-bezier(0, 0.52, 0, 1);
+  width: 20vw;
+  height: 100vh;
+
+.showInitiativeButton {
+  width: 15vw;
+  height: 8vh;
+}
+
+
+}
+
+.initiativeContainerShown {
+  position: fixed;
+  left: 0;
+  top: 0;
+  transform: translate3d(80vw, 0, 0);
+  transition: transform 0.3s cubic-bezier(0, 0.52, 0, 1);
+  width: 20vw;
+  height: 100vh;
+  background-color: rgb(163, 163, 163);
+
+  .header {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+
+    button {
+      padding: 5px 15px;
+    }
+
+  }
+
+
+  .inputName{
+    width: 50%;
+  }
+
+  .inputInitiative{
+    width: 50%;
+  }
+
+}
+
+.initiativeItem {
+  display: flex;
+  width: 100%;
+
+  .itemName{
+    width: 50%;
+  }
+  .itemInitiative{
+    width: 35%;
+
+  }
+  .initiativeButton {
+    width: 15%;
   }
 }
+
+
