--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 
 
@@ -14,8 +15,7 @@
   height: 100vh;
   width: 100vw;
   background: rgb(219, 219, 219);
-
-
+  overflow: scroll;
 }
 
 .header {
@@ -58,13 +58,13 @@
   position: fixed;
   left: 0;
   top: 0;
-  transform: translate3d(85vw, 0, 0);
+  transform: translate3d(90vw, 0, 0);
   transition: transform 0.3s cubic-bezier(0, 0.52, 0, 1);
   width: 20vw;
   height: 100vh;
 
 .showInitiativeButton {
-  width: 15vw;
+  width: 10vw;
   height: 8vh;
 }
 
